--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -151,7 +151,7 @@ body.modal-open {
 .itemCard {
   position: relative;
   border-radius: 16px;
-  background: var(--tg-theme-secondary-bg-color);
+  background: #232e3c;
   padding: 12px;
   display: flex;
   flex-direction: column;
@@ -715,13 +715,13 @@ body.modal-open {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 20px;
-  background: var(--tg-theme-secondary-bg-color);
+  padding: 16px 12px;
+  background: #232e3c;
   margin-top: 1rem;
   border-radius: 16px;
 
   .withdrawButton {
-    width: 150px;
+    width: 100px;
   }
 }
 
@@ -789,8 +789,8 @@ body.modal-open {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 20px;
-  background: var(--tg-theme-secondary-bg-color);
+  padding: 16px 12px;
+  background: #232e3c;
   margin-top: 1rem;
   border-radius: 16px;
 }
@@ -808,7 +808,7 @@ body.modal-open {
   color: #7c3aed;
   font-weight: bold;
   transition: background-color 0.2s;
-  width: 150px;
+  width: 100px;
 
   &:hover {
     background: rgba(124, 58, 237, 0.2);
@@ -1733,7 +1733,7 @@ body.modal-open {
 
       button {
         flex: 1;
-        padding: 10px;
+  padding: 10px;
         border-radius: 8px;
         font-weight: 500;
         font-size: 14px;
@@ -1864,8 +1864,8 @@ body.modal-open {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 17px;
-  background: var(--tg-theme-secondary-bg-color);
+  padding: 12px 12px;
+  background: #232e3c;
   border-radius: 12px;
 
   .referralInfo {
@@ -1877,7 +1877,6 @@ body.modal-open {
       font-size: 20px;
       font-weight: 500;
       color: var(--tg-theme-text-color);
-      margin-left: 4px;
       margin-right: 10px;
     }
 
@@ -1901,7 +1900,7 @@ body.modal-open {
     gap: 6px;
     cursor: pointer;
     transition: opacity 0.2s;
-    width: 178px;
+    width: 125px;
 
     &:hover {
       opacity: 0.9;
