--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -7,6 +7,7 @@
   position: relative;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
 }
 
 .storeContent {
@@ -61,10 +62,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 40px 20px;
   text-align: center;
   color: var(--tg-theme-hint-color);
+  min-height: 100vh;
 
   p {
     margin: 4px 0;
