--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -767,7 +767,7 @@ body.modal-open {
 }
 
 .amount {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
   color: var(--tg-theme-text-color, white);
 }
@@ -2010,4 +2010,99 @@ body.modal-open {
 .withdrawSticker {
   width: 100%;
   height: 100%;
+}
+
+.supportBox {
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 12px;
+  background: var(--tg-theme-secondary-bg-color);
+  border-radius: 12px;
+
+  .supportInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    .supportLabel {
+      font-size: 20px;
+      font-weight: 500;
+      color: var(--tg-theme-text-color);
+      margin-right: 10px;
+    }
+  }
+
+  .supportButton {
+    padding: 8px 4px;
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    cursor: pointer;
+    transition: opacity 0.2s;
+    width: 125px;
+    text-align: center;
+
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+}
+
+.supportContent {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  max-width: 100vw;
+
+  h2 {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0;
+  }
+
+  .supportInput {
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid var(--tg-theme-hint-color);
+    background: var(--tg-theme-secondary-bg-color);
+    color: var(--tg-theme-text-color);
+    resize: none;
+    font-family: inherit;
+    
+    &:focus {
+      outline: none;
+      border-color: var(--tg-theme-button-color);
+    }
+  }
+
+  .sendButton {
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
+    border: none;
+    border-radius: 8px;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: opacity 0.2s;
+
+    &:disabled {
+      opacity: 0.7;
+      cursor: not-allowed;
+    }
+
+    &:not(:disabled):hover {
+      opacity: 0.9;
+    }
+  }
 }
