--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -2095,6 +2095,7 @@ body.modal-open {
     font-weight: 500;
     cursor: pointer;
     transition: opacity 0.2s;
+    text-align: center;
 
     &:disabled {
       opacity: 0.7;
