--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -1869,7 +1869,7 @@ body.modal-open {
   color: var(--tg-theme-hint-color);
   margin: 0 auto;
   background-color: var(--tg-theme-bg-color);
-  min-height: 70vh;
+  min-height: 90vh;
 
   p {
     margin: 4px 0;
@@ -2105,5 +2105,18 @@ body.modal-open {
     &:not(:disabled):hover {
       opacity: 0.9;
     }
+  }
+}
+
+.loadMore {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin-bottom: 60px;
+  
+  .spinner {
+    font-size: 24px;
+    color: var(--tg-theme-button-color);
   }
 }
