--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,12 @@ html {
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   font-weight: 400;
+  min-height: 100vh;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: black;
+  /* color-scheme: light dark; */
+  /* background-color: black; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
